--- a/configs/auth.json.example
+++ b/configs/auth.json.example
@@ -15,8 +15,10 @@
   },
 
   "s3://my-conda-bucket": {
-    "aws_access_key_id": "YOUR_ACCESS_KEY",
-    "aws_secret_access_key": "YOUR_SECRET_KEY",
-    "aws_session_token": "YOUR_SESSION_TOKEN"
+    "S3Credentials": {
+      "access_key_id": "YOUR_ACCESS_KEY",
+      "secret_access_key": "YOUR_SECRET_KEY",
+      "session_token": "YOUR_SESSION_TOKEN"
+    }
   }
 }
