--- a/pkgs/meso-forge-tooling/recipe.yaml
+++ b/pkgs/meso-forge-tooling/recipe.yaml
@@ -2,7 +2,7 @@
 schema_version: 1
 
 context:
-  version: "0.1.6"
+  version: "0.1.9"
 
 package:
   name: meso-forge-tooling
@@ -34,16 +34,26 @@ build:
       cp common/README.adoc $PREFIX/share/meso-forge-tooling/
       cp common/LICENSE.txt $PREFIX/share/meso-forge-tooling/
 
-      # Create wrapper script for meso-forge command
+      # Create wrapper scripts for meso-forge command
       mkdir -p $PREFIX/bin
-      cp -r meso-forge-tooling/scripts/meso-forge  $PREFIX/bin/meso-forge
+
+      # Install the nushell wrapper script
+      cp meso-forge-tooling/scripts/meso-forge.nu $PREFIX/bin/meso-forge.nu
+      chmod +x $PREFIX/bin/meso-forge.nu
+
+      # Create bash shim that calls the nushell version
+      cat > $PREFIX/bin/meso-forge << 'EOF'
+      #!/bin/bash
+      # meso-forge - Bash shim for nushell wrapper
+      exec nu "$CONDA_PREFIX/bin/meso-forge.nu" "$@"
+      EOF
       chmod +x $PREFIX/bin/meso-forge
 
       # Create environment activation script
       mkdir -p $PREFIX/etc/conda/activate.d
       cat > $PREFIX/etc/conda/activate.d/meso-forge-tooling.sh << 'EOF'
       export MESO_FORGE_TOOLING_ROOT="$CONDA_PREFIX/share/meso-forge-tooling"
-      export MESO_FORGE_VERSION="0.1.6"
+      export MESO_FORGE_VERSION="0.1.9"
       EOF
 
 requirements:
